--- a/lang/tm.json
+++ b/lang/tm.json
@@ -107,9 +107,5 @@
     "Weight": "Agram",
     "Car": "Awtoulag",
     "Busy": "Meşgul",
-    "Remain": "Galany",
-
-    "Phone": "",
-    "Message": "",
-    "Send": ""
+    "Remain": "Galany"
 }
